[metadata]
name = flow-benchmarks
description =
long_description = file: README.md
long_description_content_type = text/markdown
author = Michael J. Williams
url = https://github.com/mj-will/flow-benchmarks
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = normalising flows, machine learning

[options]
package_dir=
    =src
packages = find:
python requires = >=3.8
install_requires =
    matplotlib
    numpy
    torch
    pytorch_lightning
test_suite = tests
tests_require =
    pytest

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    pre-commit
    pytest

[flake8]
max-line-length = 79
extended-ignore = E203
